<resources>
    <string name="app_name">Movie Library</string>
    <string name="toolName">Movie Library</string>
    <string name="todo">TODO</string>
    <string name="movie_library">Movie Library</string>

    <string name="navUpOptions1">Сегодня в кино</string>
    <string name="navUpOptions2">Топ лучших фильмов</string>
    <string name="navUpOptions3">Поиск фильмов</string>

    <string name="head">Бегущий по лезвию 2049</string>
    <string name="example">imdb 8.5</string>
    <string name="example2">Фантастика</string>
    <string name="example3">Жанр фантастика</string>

    <string name="_2015">год 2015</string>
    <string name="customMenuName">Жанр фильмов</string>

    <string name="rating">Рейтинг</string>
    <string name="setting">Setting</string>
    <string name="info">Info</string>

    <string name="Details">Details</string>

    <string name="genre1">Все</string>
    <string name="genre2">Фантастика</string>
    <string name="genre3">Драма</string>
    <string name="genre4">Комедия</string>
    <string name="genre5">Боевик</string>
    <string name="genre6">Детский</string>
    <string name="genre7">Детектив</string>
    <string name="genre8">Триллер</string>
    <string name="genre9">Хоррор</string>
    <string name="genre10">Вестерн</string>
    <string name="genre11">Мюзикл</string>
    <string name="genre12">Спорт</string>

    <string name="imdb">Топ лучших фильмов по версии IMDB</string>
    <string name="head2">Описание</string>

    <string name="headTitle">Бюджет</string>
    <string name="headTitle2">Год производства</string>
    <string name="headTitle3">Режиссёр</string>
    <string name="headTitle4">Страна</string>

    <string name="ratingTitle">Рейтинг кинокритиков _</string>
    <string name="textHead">Кино афиша</string>
    <string name="string18">Отображение контента для взрослых</string>
    <string name="DarkTheme">Включение ночной темы</string>
    <string name="stringInfo">Приложение для поиска информации фильмов и сериалов</string>
    <string name="favourites">Favourites</string>
    <string name="favouritesTextHead">Избранное</string>
    <string name="history">History</string>
    <string name="history2">История просмотра</string>
    <string name="text4">Text555</string>
    <string name="delete_history">Delete History</string>
    <string name="need_permissions_to_read_contacts">Предоставьте разрешение</string>
    <string name="contacts">Contacts</string>
    <string name="Contacts">Контакты</string>
    <string name="search">Поиск</string>

    <string name="dialog_title_gps_turned_off">dialog_title_gps_turned_off</string>
    <string name="dialog_message_last_location_unknown">dialog_message_last_location_unknown</string>
    <string name="dialog_message_last_known_location">dialog_message_last_known_location</string>
    <string name="dialog_button_close">dialog_button_close</string>

    <string name="dialog_address_title">dialog_address_title1</string>
    <string name="dialog_address_get_weather">dialog_address_get_weather</string>

</resources>