<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/optionsLocations"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/optionsToolbarSetting"
        android:title="@string/setting"
        android:icon="@drawable/ic_round_settings_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/optionsToolbarInfo"
        android:title="@string/info" />

    <item
        android:id="@+id/optionsToolbarFavourites"
        android:title="@string/history" />

    <item
        android:id="@+id/contacts"
        android:title="@string/contacts" />

</menu>